# Reaper_prime

./: .gitignore  App.cpp  App.h  AppOpenCL.cpp  AppOpenCL.h  CMakeConf.h.in  CMakeLists.txt  CPUAlgos.h  CPUAlgos_global.cpp  CPUAlgos_global.h  CPUAlgos_hp7.cpp  CPUAlgos_mtrlt.cpp  CPUMiner.cpp  CPUMiner.h  CSieveOfEratosthenes.cpp  CSieveOfEratosthenes.h  Config.cpp  Config.h  Curl.cpp  Curl.h  Global.h  LICENSE  Primes.cpp  Primes.h  README.md  SHA256.cpp  SHA256.h  ServerSettings.cpp  ServerSettings.h  Sieve.cpp  Sieve.h  TODO.txt  Util.cpp  Util.h  VERSION.txt  build.txt  cmake-linux-debug.sh  cmake-linux.sh  cmake-mingw.sh  license.txt  (+7 more)
